# prefetching

./: manage.py  pyproject.toml
pizzas/: models.py  tests.py
pizzas/migrations/: 0001_initial.py  0002_pizza_is_vegetarian.py
prefetching/: asgi.py  settings.py  urls.py  wsgi.py
