[tool.poetry]
name = "prefetching"
version = "0.1.0"
description = ""
authors = ["Renato Oliveira <gh@renatooliveira.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2"
django-shell-plus = "^1.1.7"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
